<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp304.group1.lab4.AddPatient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp">


        <TextView
            android:text="@string/txtPatientFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblFirstName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/txtFirstName" />

        <TextView
            android:text="@string/txtPatientLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblLastName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/txtLastName" />

        <TextView
            android:text="@string/txtDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblDprt" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnrDprt" />

        <TextView
            android:text="@string/txtDocID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblDocID" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnrDocId" />

        <TextView
            android:text="@string/txtRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblRoom" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnrRoom" />

    </LinearLayout>

    <Button
        android:text="@string/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="120dp"
        android:onClick="addPatient"
        android:id="@+id/button5" />

</RelativeLayout>
