<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_database_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp304.group1.lab4.DatabaseManager">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/txtNurseChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:id="@+id/welcomeLabel" />

        <Button
            android:text="@string/txtCreateNewPatient"
            android:onClick="addPatientClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:id="@+id/button" />

        <Button
            android:text="@string/txtViewPatients"
            android:onClick="showPatients"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/button2"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent" />

    </LinearLayout>

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/patientList" />


</RelativeLayout>